# home-assistant-apprise-notify

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml
.github/workflows/: ci.yml  hacs.yml
custom_components/apprise_notify/: __init__.py  client.py  const.py  manifest.json  notify.py
tests/: test_client.py  test_repository_metadata.py
