[project]
name = "home-assistant-apprise-notify"
version = "0.0.0"
description = "Home Assistant custom notify integration for Apprise API"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
authors = [
  { name = "Igor Karpovich" }
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.12.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]
